# PySPRINT

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.py
rsprint/: __init__.py  entrypoints.py  hsp_extraction.py  hsp_processing.py  predictions.py  scoring.py
scripts/: plot_contributions.py
sprint/: __init__.py  entrypoints.py  hsp_extraction.py  hsp_processing.py  scoring.py
src/: extractor.rs  lib.rs  peptide_scorer.rs  predictor.rs  processor.rs  site_predictor.rs
src/rsprint/: constants.rs  extraction.rs  fileio.rs  hsp.rs  mod.rs  prediction.rs  processing.rs  protein.rs  proteinset.rs  pymodules.rs  scoring.rs  similarity.rs  sites.rs  smer.rs  utils.rs
src/sprint/: extraction.rs  fileio.rs  hsp.rs  location.rs  prediction.rs  processing.rs  protein.rs  proteinset.rs  pymodules.rs  scoring.rs  seed.rs  similarity.rs  sites.rs  smer.rs  utils.rs
