[package]
name = "SPRINT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*" }
clap = { version = "3.0.14", features = ["derive"] }
bio = "*"
lazy_static = "*"
rayon = "*"
indicatif = {version = "*", features = ["with_rayon"]}
chrono = "*"
rand = "*"
pyo3 = "*"
ndarray = "*"
numpy = "*"

[lib]
name = "sprint"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["pyo3/extension-module"]

[[bin]]
name = "extractor"
path = "src/extractor.rs"

[[bin]]
name = "processor"
path = "src/processor.rs"

[[bin]]
name = "predictor"
path = "src/predictor.rs"

[[bin]]
name = "site-predictor"
path = "src/site_predictor.rs"

[[bin]]
name = "peptide-scorer"
path = "src/peptide_scorer.rs"



